 <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:collapseColumns="@string/abc_toolbar_collapse_description"
        android:divider="#010101"
        android:orientation="horizontal"
        android:shrinkColumns="*">

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn1"
             android:id="@+id/button1"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn2"
             android:id="@+id/button2"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn3"
             android:id="@+id/button3"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn4"
             android:id="@+id/button4"
             android:layout_column="0"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn5"
             android:id="@+id/button5"
             android:layout_column="0"
             android:onClick="onClick"/>

     </TableRow>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn6"
             android:id="@+id/button6"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn7"
             android:id="@+id/button7"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn8"
             android:id="@+id/button8"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn9"
             android:id="@+id/button9"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn10"
             android:id="@+id/button10"
             android:layout_column="0"
             android:onClick="onClick"/>

     </TableRow>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn11"
             android:id="@+id/button11"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn12"
             android:id="@+id/button12"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn13"
             android:id="@+id/button13"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn14"
             android:id="@+id/button14"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn15"
             android:id="@+id/button15"
             android:layout_column="0"
             android:onClick="onClick"/>

     </TableRow>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn16"
             android:id="@+id/button16"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn17"
             android:id="@+id/button17"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn18"
             android:id="@+id/button18"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn19"
             android:id="@+id/button19"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn20"
             android:id="@+id/button20"
             android:layout_column="0"
             android:onClick="onClick"/>

     </TableRow>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn21"
             android:id="@+id/button21"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn22"
             android:id="@+id/button22"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn23"
             android:id="@+id/button23"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn24"
             android:id="@+id/button24"
             android:layout_column="0"
             android:onClick="onClick"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn25"
             android:id="@+id/button25"
             android:layout_column="0"
             android:onClick="onClick"/>

     </TableRow>

 </TableLayout>
